propagate --add-exports into Espresso guest